feat(clubs): add missing club fields
