# rest/schema/objects.go
@@ -364,21 +364,36 @@ type Degree struct {
 	JointProgram   bool   `bson:"joint_program" json:"joint_program"`
 }
 
-type Contact struct {
+type ClubsOfficer struct {
+	Name     string `json:"name"`
+	Position string `json:"position"`
+}
+
+type ClubsContact struct {
 	Platform string `json:"platform"`
 	URL      string `json:"url"`
 }
 
+type ClubsMembershipForm struct {
+	Name string `json:"name"`
+	URL  string `json:"url"`
+}
+
 type Club struct {
-	Slug         string              `json:"slug"`
-	ID           string              `json:"id"`
-	Name         string              `json:"name"`
-	Description  string              `json:"description"`
-	Tags         []string            `json:"tags"`
-	ProfileImage string              `json:"profile_image"`
-	UpdatedAt    time.Time           `json:"updated_at"`
-	Officers     []map[string]string `json:"officers"`
-	Contacts     []Contact           `json:"contacts"`
+	ID              string                `json:"id"`
+	Slug            string                `json:"slug"`
+	Name            string                `json:"name"`
+	Alias           string                `json:"alias"`
+	Description     string                `json:"description"`
+	Tags            []string              `json:"tags"`
+	Schools         []string              `json:"schools"`
+	FoundingDate    time.Time             `json:"founding_date"`
+	UpdatedAt       time.Time             `json:"updated_at"`
+	ProfileImage    string                `json:"profile_image"`
+	BannerImage     string                `json:"banner_image"`
+	Officers        []ClubsOfficer        `json:"officers"`
+	Contacts        []ClubsContact        `json:"contacts"`
+	MembershipForms []ClubsMembershipForm `json:"membership_forms"`
 }
 
 type ClubsEvent struct {
